--- a/l4-udp-qos.html
+++ b/l4-udp-qos.html
@@ -1,78 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-        <!-- Immediately inside your <body>, at the very top: -->
-        <header class="site-header">
-          <a href="index.html" class="header-link">
-            <div class="site-title">KEFOSOFT</div>
-            <img src="images/cat.png" alt="KefoSoft Logo" class="logo-img">
-          </a>
-
-            <!-- In your <head> -->
-        <style>
-          :root {
-            --hdr-bg: rgba(30,30,30,0.95);
-            --hdr-radius: 0.5rem;
-            --primary: #00c4cc;
-            --accent: #17a2b8;
-            --text-light: #f8f9fa;
-          }
-
-          /* HEADER STYLES */
-          .site-header {
-            background: var(--hdr-bg);
-            padding: 0.75rem 1rem;
-            border-radius: var(--hdr-radius);
-            box-shadow: 0 0 10px rgba(0,0,0,0.5);
-            margin-bottom: 2rem;
-          }
-          .header-link {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-          }
-          .site-title {
-            font-family: Georgia, serif;
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: var(--primary);
-            margin-right: 0.75rem;
-            transition: color 0.2s, transform 0.2s;
-            cursor: pointer;
-          }
-          .site-title:hover {
-            color: var(--accent);
-            transform: scale(1.05);
-          }
-          .logo-img {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid var(--primary);
-          }
-
-          /* RESPONSIVE */
-          @media (max-width: 576px) {
-            .site-header {
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-            }
-            .site-title {
-              margin-bottom: 0.5rem;
-              font-size: 1.5rem;
-            }
-            .logo-img {
-              margin-bottom: 0.5rem;
-            }
-          }
-        </style>
-
-        </header>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Favicon -->
+  <link rel="icon" href="images/cat.png" type="image/x-icon">
   <title>L4 – UDP QoS Issue</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
@@ -189,6 +121,75 @@
     }
   </style>
 </head>
+        <!-- Immediately inside your <body>, at the very top: -->
+        <header class="site-header">
+          <a href="index.html" class="header-link">
+            <div class="site-title">KEFOSOFT</div>
+            <img src="images/cat.png" alt="KefoSoft Logo" class="logo-img">
+          </a>
+
+            <!-- In your <head> -->
+        <style>
+          :root {
+            --hdr-bg: rgba(30,30,30,0.95);
+            --hdr-radius: 0.5rem;
+            --primary: #00c4cc;
+            --accent: #17a2b8;
+            --text-light: #f8f9fa;
+          }
+
+          /* HEADER STYLES */
+          .site-header {
+            background: var(--hdr-bg);
+            padding: 0.75rem 1rem;
+            border-radius: var(--hdr-radius);
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            margin-bottom: 2rem;
+          }
+          .header-link {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+          }
+          .site-title {
+            font-family: Georgia, serif;
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: var(--primary);
+            margin-right: 0.75rem;
+            transition: color 0.2s, transform 0.2s;
+            cursor: pointer;
+          }
+          .site-title:hover {
+            color: var(--accent);
+            transform: scale(1.05);
+          }
+          .logo-img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid var(--primary);
+          }
+
+          /* RESPONSIVE */
+          @media (max-width: 576px) {
+            .site-header {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+            }
+            .site-title {
+              margin-bottom: 0.5rem;
+              font-size: 1.5rem;
+            }
+            .logo-img {
+              margin-bottom: 0.5rem;
+            }
+          }
+        </style>
+
+        </header>
 <body>
 
   <div class="container">
