--- a/index.html
+++ b/index.html
@@ -189,23 +189,22 @@
   <div class="container">
 
     <!-- OVERVIEW block -->
-    <div class="content-block">
-      <h2>Final Design Project Overview</h2>
-      <p>
-        Welcome to your Network course Final Design Project (FDP). You will identify ten current network issues
-        spanning OSI Layers 7 down to 1, describe each problem clearly, and provide step-by-step solutions.
-        Assemble everything as an Admin Guide Tutorial in a navigable HTML format.
-      </p>
-      <p>
-        Include Cisco Packet Tracer simulations for each scenario, and package the CPT files alongside your HTML.
-        A bonus will be awarded for an interactive homepage linking to each issue page with embedded or downloadable
-        simulations.
-      </p>
-      <p>
-        <strong>Deadline:</strong> One week after the final exam. FDP counts for 60% of your final grade and is only
-        accepted if you sat the final exam.
-      </p>
-    </div>
+<div class="content-block">
+  <h2>Final Design Project Overview</h2>
+  <p>
+    This project serves as the Final Design Project (FDP) for the Computer Networks course. The objective is to identify and analyze <strong>10 real-world network issues</strong>, each corresponding to one or more of the <strong>OSI model’s 7 layers</strong> — from Layer 7 (Application) down to Layer 1 (Physical).
+  </p>
+  <p>
+    Each issue is described clearly, accompanied by a <strong>step-by-step tutorial</strong> for solving the problem. The tutorials are visually supported with diagrams, screenshots, and network topology illustrations where applicable.
+  </p>
+  <p>
+    The project is compiled as an <strong>interactive Admin Guide in HTML format</strong>, featuring a user-friendly homepage that links to each issue page. While Cisco Packet Tracer (.cpt) simulations are not included in the current version, placeholders and design considerations have been made for future integration.
+  </p>
+  <p>
+    This project not only demonstrates technical problem-solving aligned with the OSI architecture but also aims to serve as a practical reference guide for network administrators.
+  </p>
+</div>
+
 
     <!-- MODULES / ISSUE LIST -->
     <h2 class="section-title">Modules by OSI Layer</h2>
@@ -262,10 +261,7 @@
       </div>
     </div>
 
-    <!-- HOME BUTTON -->
-    <div class="text-center">
-      <a href="index.html" class="btn-home">Home</a>
-    </div>
+
 
     <!-- FOOTER -->
     <div class="footer">
